--- a/styles/app.scss
+++ b/styles/app.scss
@@ -156,9 +156,8 @@ a[href] {
 }
 
 .panda {
-	position: absolute;
-	left: 0;
-	top: 80%;
 	width: 100px;
 	height: 100px;
+	margin-left: auto;
+	margin-right: auto;
 }
