--- a/styles/app.scss
+++ b/styles/app.scss
@@ -161,3 +161,17 @@ a[href] {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+@keyframes panda-animation {
+from {width: 30%; box-shadow: 0px 0px 0px; transform: rotate(0deg)}
+to {width: 60%; box-shadow: 20px 20px 20px; transform: rotate(360deg)}
+}
+
+.panda-image {
+	width: 30%;
+	box-shadow: 0px 0px 0px;
+	transform: rotate(0deg);
+	animation-name: panda-animation;
+	animation-duration: 17s;
+	animation-fill-mode: forwards;
+}
