--- a/styles/app.scss
+++ b/styles/app.scss
@@ -75,17 +75,26 @@ a[href] {
 	}
 
 	.text-wrapper {
-		width: 50%;
+		width: max-content;
 
 		&.w-full {
 			width: 100%;
 		}
 
-		.title {
-			font-size: 48px;
+		}
+
+		h1.title {
+			font-size: 3em;
 			margin-top: 0;
 			margin-bottom: 10px;
 			text-shadow: 3px 3px 3px
+		}
+
+		h2.title {
+			font-size: 2em;
+			margin-top: 10%;
+			margin-bottom: 10px;
+
 		}
 
 		.description {
@@ -113,7 +122,6 @@ a[href] {
 		width: 50%;
 		text-align: right;
 	}
-}
 
 .portfolio-wrapper {
 	display: flex;
